# indra

./: .gitignore  .ocamlformat  Notes.tm  README.md  biblio.bib  dune  dune-project  indra.opam  notes.org
bench/: README.org  gens.c  gens.py
lib/: complex_ext.ml  data.ml  dune  geometry.ml  group.ml  math.ml  mobius.ml
test/: dune  test_indra.ml
